--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <div class="intro">
         
         <h1>C16-Page</h1>
-        <h2>Personal blog theme powered by Hugo</h2>
+        <h2>azure,aws,salesforce,herokuとか、クラウドプラットフォーム開発を中心に更新していきます</h2>
         
     </div>
 </main>
